# xorg__lib__liboldX

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  README  configure.ac  oldx.pc.in
include/X11/: X10.h
src/: .cvsignore  Makefile.am  XCrAssoc.c  XDelAssoc.c  XDestAssoc.c  XDraw.c  XLookAssoc.c  XMakeAssoc.c
